# Copyright 2019 The ANGLE Project Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

spirv_tools_standalone = false

spirv_tools_googletest_dir = ""
spirv_tools_spirv_headers_dir = "//external/SPIRV-Headers"
spirv_tools_dir = "//external/SPIRV-Tools"
